--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -96,11 +96,11 @@ $cols = [
                         <a href="/docs/functions"><i class="icon-right-dir"></i> Functions</a>
 
                         <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-develop" data-selected="/docs/functions-develop"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Develop</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-deploy" data-selected="/docs/functions-deploy"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deploy</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-execute" data-selected="/docs/functions-execute"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Execute</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-runtimes" data-selected="/docs/functions-runtimes"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Runtimes</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/functions-recipes" data-selected="/docs/functions-recipes"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Recipes</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-develop" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Develop</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-deploy" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Deploy</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-execute" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Execute</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-runtimes" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Runtimes</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/functions-recipes" data-selected="/docs/functions"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Recipes</a></li>
                         </ul>
                     </li>
                 </ul>
