--- a/app/views/docs/functions-runtimes.phtml
+++ b/app/views/docs/functions-runtimes.phtml
@@ -40,4 +40,4 @@ $runtimes = $this->getParam('runtimes', []);
     </tbody>
 </table>
 
-[TODO: Label which ones are cloud only]
+[TODO: @matej Label which ones are cloud only, idk how to do cleanly]
