--- a/app/views/docs/migration-firebase.phtml
+++ b/app/views/docs/migration-firebase.phtml
@@ -52,11 +52,13 @@
     Click on the <b>Create Migration</b> button and select <b>Firebase</b> as your source.
   </li>
   <li>
-    Depending on where your Appwrite project is hosted, you'll need to use different methods to authorize with Firebase.
+    Depending on where your Appwrite project is hosted, you'll need to use different methods to authorize with Firebase. 
+    See the <a href="#cloud">Cloud</a> and <a href="#self-hosted">Self-hosting</a> sections for details.
+  </li>
+  <li>
+    Finally, add the platforms for your <a href="/docs/getting-started-for-web">Web</a>, <a href="getting-started-for-flutter/docs/getting-started-for-flutter">Flutter</a>, <a href="/docs/getting-started-for-android">Android</a>, and <a href="/docs/getting-started-for-apple">iOS</a> apps.
   </li>
 </ol>
-
-
 
 <h3><a href="#cloud" id="cloud">Appwrite Cloud</a></h3>
 <p>
